# legora-ai

./: .env.example  .gitignore  README.md  package.json  turbo.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep
apps/api/src/: __init__.py  config.py  database.py  main.py
apps/api/src/analysis/: llm.py  prompts.py  rag.py  router.py  schemas.py  service.py
apps/api/src/audit/: middleware.py  models.py  router.py  service.py
apps/api/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/src/common/: exceptions.py  pagination.py
apps/api/src/contracts/: models.py  router.py  schemas.py  service.py
apps/api/src/documents/: chunker.py  models.py  parser.py  router.py  service.py
apps/api/src/review/: models.py  router.py  schemas.py  service.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: Providers.tsx
apps/web/src/components/contract/: ClauseCard.tsx  ContractUploader.tsx  QAChat.tsx  RiskDashboard.tsx
apps/web/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  (+1 more)
apps/web/src/lib/: api.ts
apps/web/src/stores/: authStore.ts
infra/docker/: docker-compose.yml
ml/: pyproject.toml
ml/training/config/: lora_config.yaml
ml/training/scripts/: evaluate.py  prepare_data.py  train_lora.py
(+5 files in other folders)
