[project]
name = "legora-ml"
version = "0.1.0"
description = "Legora AI — ML Training Pipeline"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.47.0",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    "datasets>=3.2.0",
    "accelerate>=1.2.0",
    "mlflow>=2.19.0",
    "evaluate>=0.4.3",
    "rouge-score>=0.1.2",
    "sentence-transformers>=3.3.0",
    "trl>=0.13.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
